force-app/main/default/objects/FSK_FSL_Starter_Kit__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Settings object is part of the Starter Kit.
It stores the pack properties and preferences</description>
    <fields>
        <fullName>ActualTimes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Times_on_Gantt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Times on Gantt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Resource_On_Service_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Resource On Service Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_FSL_Resource_From_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create FSL Resource From User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndingStatus__c</fullName>
        <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to end time actions</inlineHelpText>
        <label>Ending Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populate_Work_Order_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Populate Work Order Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Gantt_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Gantt Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartingStatus__c</fullName>
        <inlineHelpText>This field stores the Services Appointment statues API Name that indicates changes relates to start time actions</inlineHelpText>
        <label>Starting Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL Starter Kit</label>
    <listViews>
        <fullName>All_Fields_and_Records</fullName>
        <columns>ActualTimes__c</columns>
        <columns>StartingStatus__c</columns>
        <columns>EndingStatus__c</columns>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields and Records</label>
    </listViews>
</CustomObject>