force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Cancel_Child_SA_on_WO_Cancelation__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Child_SA_on_WO_Cancelation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Child SA on WO Cancelation</label>
    <type>Checkbox</type>
</CustomField>