force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Cancelation_Notification__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelation Notification</label>
    <type>Checkbox</type>
</CustomField>