force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Community_Dispatcher_License__c.field-meta.xml
<CustomField>
    <fullName>Community_Dispatcher_License__c</fullName>
    <inlineHelpText>Dispatcher</inlineHelpText>
    <label>Community Dispatcher License</label>
    <length>18</length>
    <type>Text</type>
</CustomField>