force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Community_Dispatcher_Permission__c.field-meta.xml
<CustomField>
    <fullName>Community_Dispatcher_Permission__c</fullName>
    <label>Community Dispatcher Permission</label>
    <length>18</length>
    <type>Text</type>
</CustomField>