force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Emergency_Dispatched_Notification__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Dispatched_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Dispatched Notification</label>
    <type>Checkbox</type>
</CustomField>