force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Mobile_Canned_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Canned_Custom_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Canned Custom Notification</label>
    <type>Checkbox</type>
</CustomField>