force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Mobile_PSL_ID__c.field-meta.xml
<CustomField>
    <fullName>Mobile_PSL_ID__c</fullName>
    <label>Mobile PSL ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>