force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Mobile_Status_Satiation__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Status_Satiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Status Satiation</label>
    <type>Checkbox</type>
</CustomField>