force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Populate_Work_Order_Line_Item_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Populate_Work_Order_Line_Item_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Populate Work Order Line Item Lookup</label>
    <type>Checkbox</type>
</CustomField>