force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Resource_License_Permission_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_License_Permission_ID__c</fullName>
    <label>Resource License Permission ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>