force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Service_Appointment_Parent_Structure__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Parent_Structure__c</fullName>
    <label>Service Appointment Parent Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>