force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Show_Scheduled_Times_in_Different_TZ__c.field-meta.xml
<CustomField>
    <fullName>Show_Scheduled_Times_in_Different_TZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Scheduled Times in Different TZ</label>
    <type>Checkbox</type>
</CustomField>