force-app/main/default/objects/FSK_FSL_Starter_Kit__c/fields/Successful_Asset_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Successful_Asset_Installation_Status__c</fullName>
    <inlineHelpText>The status that represents a successful asset installation</inlineHelpText>
    <label>Successful Asset Installation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>