force-app/main/default/objects/FSK_FSL_Starter_Kit__c/listViews/All_Fields_and_Records.listView-meta.xml
<ListView>
    <fullName>All_Fields_and_Records</fullName>
    <columns>ActualTimes__c</columns>
    <columns>StartingStatus__c</columns>
    <columns>EndingStatus__c</columns>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields and Records</label>
</ListView>